--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "bootstrap": "^4.5.0",
         "headroom.js": "^0.11.0",
         "owl.carousel": "^2.3.4"
     }
